--- a/public/index.html
+++ b/public/index.html
@@ -26,11 +26,16 @@
       </div>
     </div>
 
-    <div class="flex flex-col" id="back-navigation">
+    <div class="flex flex-row" id="back-navigation">
       <div>
         <button onclick="popView();" class="back-btn">
           <i class="fa-solid fa-chevron-left"></i>
           <p>Back</p>
+        </button>
+
+        <button onclick="popView();" class="profile-btn">
+          <p>Profile</p>
+          <i class="fa-solid fa-chevron-right"></i>
         </button>
       </div>
     </div>
@@ -317,6 +322,7 @@
         <span>3 minutes ago</span>
       </div>
     </div>
+    
 
     <!-- Footer -->
     <div class="footer">
