--- a/public/index.html
+++ b/public/index.html
@@ -26,17 +26,25 @@
       </div>
     </div>
 
-    <div class="flex flex-row" id="back-navigation">
-      <div>
-        <button onclick="popView();" class="back-btn">
-          <i class="fa-solid fa-chevron-left"></i>
-          <p>Back</p>
-        </button>
+    <div class="flex flex-row" id="top-nav">
+      <div class="flex flex-col" id="back-navigation">
+        <div>
+          <button onclick="popView();" class="back-btn">
+            <i class="fa-solid fa-chevron-left"></i>
+            <p>Back</p>
+          </button>
+        </div>
+      </div>
 
-        <button onclick="popView();" class="profile-btn">
-          <p>Profile</p>
-          <i class="fa-solid fa-chevron-right"></i>
-        </button>
+      <div class="flex-1"></div>
+      
+      <div class="flex flex-col" id="profile-navigation">
+        <div>
+          <button onclick="showView('profile');" class="back-btn">
+            <i class="fa-solid fa-user"></i>
+            <p>Profile</p>
+          </button>
+        </div>
       </div>
     </div>
 
