feat: show profile

--- a/public/index.html
+++ b/public/index.html
@@ -257,6 +257,18 @@
       <h1>this is the game itself</h1>
     </main>
 
+  <main class="flex flex-col" id="view-profile">
+      <div id="profile-page" class="profile-page">
+        <h2>Edit Profile</h2>
+        <form class="profile-form">
+            <input type="text" id="username" placeholder="Username" required />
+            <input type="email" id="email" placeholder="Email" required />
+            <input type="password" id="password" placeholder="Password" required />
+            <button type="submit">Save Changes</button>
+        </form>
+    </div>
+  </main>
+
     <!-- Main content -->
     <div class="main-content">
       <!-- Replace 'URL_TO_COIN_IMAGE' with actual image URL -->
