feat: credit machine button

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,12 @@
             <p>Profile</p>
           </button>
         </div>
+        <div>
+          <button onclick="showView('creditmachine');" class="back-btn">
+            <i class="fa-solid fa-star"></i>
+            <p>Credit Machine</p>
+          </button>
+        </div>
       </div>
     </div>
 
