--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
     <script defer src="lib/fontawesome/js/fontawesome.js"></script>
 
     <script defer src="js/raphael_dcf_frontend.js"></script>
+    <script defer src="js/ocean_dcf_frontend.js"></script>
+
   </head>
   <body class="dark">
     <div class="header">
@@ -46,14 +48,14 @@
           </button>
         </div>
         <div>
-          <button onclick="showView('creditmachine');" class="back-btn">
+          <button onclick="window.location.href='creditmachine.html';" class="back-btn">
             <i class="fa-solid fa-star"></i>
             <p>Credit Machine</p>
           </button>
         </div>
       </div>
     </div>
-
+    
     <main class="flex flex-col" id="view-home">
       <div class="flex flex-col hero">
         <h1>#1 MOST TRUSTED PLACE TO FLIP</h1>
