--- a/public/creditmachine.html
+++ b/public/creditmachine.html
@@ -148,11 +148,11 @@
     </div>
 
     <main class="flex flex-col" id="view-creditmachine">
-      <p>userbalance = <span id="userbalance">loading</span></p>
+      <p>Credit Balance = <span id="userbalance">loading</span></p>
       <div class="flex flex-col">
         <h2>Tap to earn credits!</h2>
         <div class="flex-container">
-            <div class="image-button" onclick="toggleSize(this)">
+            <div class="image-button"  onclick="toggleSize(this); earnCredits();">
               <img src="logo.png" alt="Click to enlarge">
             </div>
           </div>
