--- a/public/index.html
+++ b/public/index.html
@@ -37,13 +37,19 @@
       </div>
 
       <div class="flex-1"></div>
-      
+
       <div class="flex flex-col" id="profile-navigation">
         <div>
           <button onclick="showView('profile');" class="back-btn">
             <i class="fa-solid fa-user"></i>
             <p>Profile</p>
           </button>
+        </div>
+      </div>
+
+      <div class="flex flex-col" id="balance-navigation">
+        <div>
+          <p>Current balance: <span id="user-balance">Loading</span></p>
         </div>
       </div>
     </div>
@@ -130,10 +136,7 @@
     <main class="flex flex-col" id="view-login">
       <div class="auth-box flex flex-col">
         <h2>Sign in to your account</h2>
-        <form
-          id="login-form"
-          class="flex flex-col"
-        >
+        <form id="login-form" class="flex flex-col">
           <label for="login-email">Email</label>
           <input type="email" id="login-email" name="email" required />
 
@@ -152,10 +155,7 @@
     <main class="flex flex-col" id="view-register">
       <div class="auth-box flex flex-col">
         <h2>Create an account</h2>
-        <form
-          id="register-form"
-          class="flex flex-col"
-        >
+        <form id="register-form" class="flex flex-col">
           <label for="register-username">Username</label>
           <input type="text" id="register-username" name="username" required />
 
@@ -163,7 +163,12 @@
           <input type="email" id="register-email" name="email" required />
 
           <label for="register-password">Password</label>
-          <input type="password" id="register-password" name="password" required />
+          <input
+            type="password"
+            id="register-password"
+            name="password"
+            required
+          />
 
           <label for="register-confirm-password">Confirm Password</label>
           <input
@@ -330,7 +335,6 @@
         <span>3 minutes ago</span>
       </div>
     </div>
-    
 
     <!-- Footer -->
     <div class="footer">
