--- a/public/index.html
+++ b/public/index.html
@@ -148,7 +148,7 @@
       <div class="flex flex-col">
         <h2>Tap to earn credits!</h2>
         <div class="flex-container">
-          <div class="image-button" onclick="toggleSize(this); earnCredits();">
+          <div class="image-button" onclick="toggleSize(this); earnCredits(); playClickSound();">
             <img src="logo.png" alt="Click to enlarge">
           </div>
         </div>
