--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,11 @@
     <script defer src="lib/fontawesome/js/brands.js"></script>
     <script defer src="lib/fontawesome/js/solid.js"></script>
     <script defer src="lib/fontawesome/js/fontawesome.js"></script>
+
     <script defer src="js/aslam_dcf_frontend.js"></script>
     <script defer src="js/raphael_dcf_frontend.js"></script>
     <script defer src="js/ocean_dcf_frontend.js"></script>
+    <script defer src="js/chenxin_dcf_frontend.js"></script>
   </head>
   <body class="dark">
     <div class="header">
@@ -63,7 +65,7 @@
 
     <main class="flex flex-col" id="view-home">
       <div class="flex flex-col hero">
-        <h1>#1 MOST TRUSTED PLACE TO FLIP</h1>
+        <h1>FLIP DECIDER</h1>
         <svg
           width="252"
           height="244"
@@ -146,7 +148,7 @@
         <h2>Tap to earn credits!</h2>
         <div class="flex-container">
           <div class="image-button" onclick="toggleSize(this); earnCredits();">
-            <img src="logo.png" alt="Click to enlarge" />
+            <img src="logo.png" alt="Click to enlarge" draggable="false" />
           </div>
         </div>
       </div>
@@ -217,11 +219,17 @@
         </p>
         <button onclick="editProfile();">Edit</button>
       </div>
+      <button
+        onclick="window.localStorage.removeItem('authToken'); window.alert('Logged out user'); window.location = '/'"
+        style="gap: 1rem; margin-top: 4rem"
+      >
+        <i class="fa-solid fa-sign-out"></i>Log out
+      </button>
     </main>
 
     <main class="flex flex-col" id="view-game">
       <div class="flex flex-col hero">
-        <h1>#1 MOST TRUSTED PLACE TO FLIP</h1>
+        <h1>FLIP DECIDER</h1>
         <svg
           width="252"
           height="244"
@@ -290,19 +298,24 @@
           </defs>
         </svg>
       </div>
-       
+
       <h3>Coin Flip Game</h3>
       <div>
         <label>
-          <input type="radio" name="choice" value="heads"> Heads
+          <input type="radio" name="choice" value="heads" /> Heads
         </label>
         <label>
-          <input type="radio" name="choice" value="tails"> Tails
+          <input type="radio" name="choice" value="tails" /> Tails
         </label>
       </div>
       <button onclick="flipCoin()">Flip Coin</button>
       <div id="result"></div>
-      <img id="flip-animation" src="flipping animation.gif" style="display: none;" alt="Flipping Coin Animation">
+      <img
+        id="flip-animation"
+        src="flipping animation.gif"
+        style="display: none"
+        alt="Flipping Coin Animation"
+      />
     </main>
     <script>
       // JavaScript to toggle the image size with automatic reset after enlarging
