--- a/public/index.html
+++ b/public/index.html
@@ -311,7 +311,7 @@
           <input type="radio" name="choice" value="tails" /> Tails
         </label>
       </div>
-      <button onclick="flipCoin()">Flip Coin</button>
+      <button onclick="flipCoin()" id="flip-coin-btn">Flip Coin</button>
       <div id="result"></div>
       <img
         id="flip-animation"
