--- a/public/index.html
+++ b/public/index.html
@@ -171,7 +171,7 @@
         </form>
         <p>
           Don't have an account?
-          <a href="#" onclick="pushView('register')">Sign up</a>
+          <a href="#register">Sign up</a>
         </p>
       </div>
     </main>
@@ -206,7 +206,7 @@
         </form>
         <p>
           Already have an account?
-          <a href="#" onclick="pushView('login')">Sign in</a>
+          <a href="#login">Sign in</a>
         </p>
       </div>
     </main>
