--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Coin Decider</title>
+    <title>Coin Decider 2</title>
 
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
@@ -171,7 +171,7 @@
         </form>
         <p>
           Don't have an account?
-          <a href="#" onclick="pushView('register')">Sign up</a>
+          <a href="#register">Sign up</a>
         </p>
       </div>
     </main>
@@ -206,7 +206,7 @@
         </form>
         <p>
           Already have an account?
-          <a href="#" onclick="pushView('login')">Sign in</a>
+          <a href="#login">Sign in</a>
         </p>
       </div>
     </main>
